2011-08-11 22:00 baj
    * Changelog, NEWS: release version 3.0

2011-08-10  Aijun Bai <baj@mail.ustc.edu.cn>

	* NEWS,
	* dynamicdebug.txt,
	* src/Agent.cpp,
	* src/Agent.h,
	* src/BehaviorAttack.cpp,
	* src/BehaviorDribble.cpp,
	* src/BehaviorGoalie.cpp,
	* src/BehaviorPass.cpp,
	* src/BehaviorShoot.cpp,
	* src/Dasher.cpp,
	* src/DecisionTree.cpp,
	* src/Player.cpp,
	* src/PlayerParam.cpp,
	* src/Strategy.cpp,
	* src/Strategy.h: [44] Move LastActiveBehavior related codes from
	Strategy to Agent

	* Debug/makefile,
	* Debug/src/subdir.mk,
	* Release/makefile,
	* Release/src/subdir.mk,
	* src/ActionEffector.cpp,
	* src/BehaviorBlock.h,
	* src/BehaviorDribble.cpp,
	* src/BehaviorFormation.h,
	* src/BehaviorGoalie.h,
	* src/BehaviorHold.cpp,
	* src/BehaviorMark.h,
	* src/BehaviorPass.cpp,
	* src/BehaviorPenalty.h,
	* src/BehaviorSetplay.h,
	* src/BehaviorShoot.cpp,
	* src/Coach.h,
	* src/CommandSender.h,
	* src/Kicker.cpp,
	* src/Logger.h,
	* src/Parser.cpp,
	* src/Parser.h,
	* src/Player.h,
	* src/PlayerParam.h,
	* src/Plotter.cpp,
	* src/ServerParam.h,
	* src/Thread.cpp,
	* src/Utilities.cpp,
	* src/WorldState.cpp: [43] fix warnings

	* src/ActionEffector.cpp,
	* src/ActionEffector.h,
	* src/Agent.cpp,
	* src/Agent.h,
	* src/Analyser.h,
	* src/BallState.h,
	* src/BaseState.h,
	* src/BasicCommand.h,
	* src/BehaviorAttack.cpp,
	* src/BehaviorBase.h,
	* src/BehaviorDefense.cpp,
	* src/BehaviorIntercept.cpp,
	* src/BehaviorPass.cpp,
	* src/BehaviorPenalty.cpp,
	* src/BehaviorSetplay.cpp,
	* src/BehaviorShoot.cpp,
	* src/Client.cpp,
	* src/Client.h,
	* src/Coach.cpp,
	* src/Coach.h,
	* src/CommandSender.h,
	* src/CommunicateSystem.cpp,
	* src/CommunicateSystem.h,
	* src/Dasher.cpp,
	* src/Dasher.h,
	* src/DecisionTree.cpp,
	* src/DecisionTree.h,
	* src/DynamicDebug.cpp,
	* src/DynamicDebug.h,
	* src/Formation.cpp,
	* src/Formation.h,
	* src/Geometry.cpp,
	* src/Geometry.h,
	* src/InfoState.h,
	* src/InterceptInfo.cpp,
	* src/InterceptInfo.h,
	* src/InterceptModel.cpp,