@@ -34,7 +34,7 @@ new_dash_power_rate_delta_max = 0.0008
 player_speed_max_delta_max = 0
 new_stamina_inc_max_delta_factor = -6000.0
 extra_stamina_delta_min = 0
-team_name = "WrightEagleBASE"
+team_name = "WEBase"
 player_size_delta_factor = -100
 subs_max = 3
 effort_min_delta_factor = -0.004
@@ -76,8 +76,8 @@ say_ball_speed_eps      = 0.1
 say_player_speed_eps    = 0.1
 say_dir_eps             = 1.0
 
-player_version          = 14.1
-coach_version           = 14.1
+player_version          = 15.1
+coach_version           = 15.1
 
 kicker_mode             = 0
 shoot_max_distance = 32.5
