@@ -1,3 +1,11 @@
+2012-12-28  Miao Jiang
+	* src/Trainer.cpp:
+	* src/Trainer.h:
+	* train.sh:
+	* train/train.conf:
+	* train/train.report:
+	* Changelog, NEWS: release version 4.0
+
 2011-08-11 22:00 baj
     * Changelog, NEWS: release version 3.0
 
